tests/success/comptime/trivially_relocated_lifetime.bz
function test()
{
	(consteval {
		for (mut i = 0; i < 10; ++i)
		{
			let j = 0;
			let _ = move j;
		}
	});
}
